# mango-metadata-from-tables

./: CHANGELOG.md  README.md  metadata_from_tabular.py  pyproject.toml  requirements.txt  test_metadata_from_tabular.py  test_metadata_from_tabular2.py  test_metadata_from_tabular2_cases.py  test_metadata_from_tabular_cases.py  test_metadata_from_tabulular.py
docs/: construct_path_from_columns.md
src/mango_metadata_from_tables/: __init__.py  __main__.py  cli.py  create_config.py  dataframe2avus.py  metadata_from_tabular.py  preprocessing.py  prompts.py  read_table.py  run.py
testdata/: test-2.0.0-published.json  testdata.csv.json  testdata.csv.yml  testdata.xlsx.json  testdata.xlsx.yml  testdata.xlsx_blacklisted.json  testdata.xlsx_blacklisted.yml  testdata.xlsx_whitelisted.json  testdata.xlsx_whitelisted.yml  testdata_missing_column.csv  testdata_multiple_sheets.xlsx  testdata_multiple_sheets.xlsx.json  testdata_multiple_sheets.xlsx.yml  testdata_multiple_values.csv  testdata_multiple_values.csv.json  testdata_multiple_values.csv.yml  testdata_multiple_values_multiple_sheets.xlsx  testdata_multiple_values_multiple_sheets.xlsx.json  testdata_multiple_values_multiple_sheets.xlsx.yml  testdata_path_from_columns.csv  testdata_path_from_columns.csv.json  testdata_path_from_columns.csv.yml  testdata_path_from_columns_with_filters.csv.json  testdata_path_from_columns_with_filters.csv.yml  testdata_relative_path.xlsx  testdata_relative_path.xlsx.json  testdata_relative_path.xlsx.yml
tests/: test_metadata_from_tabular.py  test_metadata_from_tabular_cases.py
tests/testdata/: test-1.0.0-published.json  test-2.0.0-published.json  testdata.csv  testdata.xlsx  testdata_path_from_columns_with_filters.csv
