[project]
name = "mango-metadata-from-tables"
version = "0.1.0"
description = "Use this package to process tabular files in which each row represents an iRODS data object and each column contains either an identifier or metadata to add to this data object. It supports plain text files and Excel files, which could be stored locally or in iRODS itself."
readme = "README.md"
authors = [
    { name = "Mariana Montes" },
    { name = "Jef Scheepers" }  
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.2",
    "jinja2>=3.1.6",
    "mango-mdschema==1.0.3",
    "odfpy>=1.4.1",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "python-irodsclient==3.2.0",
    "pyyaml==6.0.2",
    "rich==13.9.4",
]

[project.scripts]
mango-metadata-from-tables = "mango_metadata_from_tables.cli:mdtab"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cases>=3.9.1",
]
